--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "nuxt": "^3.6.1",
+        "nuxt-og-image": "^2.0.28",
+        "nuxt-purgecss": "^2.0.0",
         "prettier": "^2.8.8",
         "release-it": "^15.11.0",
         "serve": "^14.2.0",
