--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "unplugin-vue-components": "^0.25.1"
     },
     "devDependencies": {
+        "@ant-design-vue/nuxt": "^1.1.1",
         "@intlify/unplugin-vue-i18n": "^1.2.0",
         "@nuxtjs/eslint-config-typescript": "^12.0.0",
         "@nuxtjs/eslint-module": "^4.1.0",
