--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "pinia": "^2.1.4",
         "sass": "^1.63.4",
         "stringify": "^5.2.0",
+        "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.2",
         "unplugin-vue-components": "^0.25.1"
     },
