--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
         "sass": "^1.63.4",
         "stringify": "^5.2.0",
         "tailwindcss": "^3.3.2",
-        "unplugin-vue-components": "^0.25.1"
+        "unplugin-vue-components": "^0.25.1",
+        "vue-final-modal": "^4.4.5"
     },
     "devDependencies": {
-        "@ant-design-vue/nuxt": "^1.1.1",
         "@intlify/unplugin-vue-i18n": "^1.2.0",
         "@nuxtjs/eslint-config-typescript": "^12.0.0",
         "@nuxtjs/eslint-module": "^4.1.0",
