--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
         "stringify": "^5.2.0",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.2",
-        "unplugin-vue-components": "^0.25.1",
-        "vue-final-modal": "^4.4.5"
+        "unplugin-vue-components": "^0.25.1"
     },
     "devDependencies": {
         "@intlify/unplugin-vue-i18n": "^1.2.0",
