Add dropdown common

--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
         "@nuxtjs/color-mode": "^3.3.0",
         "@nuxtjs/tailwindcss": "^6.8.0",
         "@pinia/nuxt": "^0.4.11",
+        "@popperjs/core": "^2.11.8",
         "@vueuse/core": "^10.2.0",
         "@vueuse/nuxt": "^10.2.1",
+        "defu": "^6.1.2",
         "nuxt-headlessui": "^1.1.4",
         "nuxt-icon": "^0.4.2",
         "pinia": "^2.1.4",
