--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
         "eslint": "^8.43.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "nuxt": "^3.6.1",
+        "nuxt": "^3.7.4",
+        "vue": "^3.3.4",
         "nuxt-og-image": "^2.0.28",
         "nuxt-purgecss": "^2.0.0",
         "nuxt-swiper": "^1.2.2",
