--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
         "unplugin-vue-components": "^0.25.1"
     },
     "devDependencies": {
+        "@auth0/auth0-vue": "^2.3.1",
         "@intlify/unplugin-vue-i18n": "^1.2.0",
+        "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
         "@nuxtjs/eslint-config-typescript": "^12.0.0",
         "@nuxtjs/eslint-module": "^4.1.0",
         "consola": "^3.1.0",
