--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
         "release": "release-it"
     },
     "dependencies": {
-        "@nuxt/content": "^2.7.0",
         "@nuxt/devtools": "^0.6.7",
         "@nuxtjs/color-mode": "^3.3.0",
         "@nuxtjs/tailwindcss": "^6.8.0",
@@ -55,7 +54,8 @@
         "stringify": "^5.2.0",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.2",
-        "unplugin-vue-components": "^0.25.1"
+        "unplugin-vue-components": "^0.25.1",
+        "volar-service-vetur": "^0.0.14"
     },
     "devDependencies": {
         "@intlify/unplugin-vue-i18n": "^1.2.0",
@@ -66,7 +66,6 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "nuxt": "^3.7.4",
-        "vue": "^3.3.4",
         "nuxt-og-image": "^2.0.28",
         "nuxt-purgecss": "^2.0.0",
         "nuxt-swiper": "^1.2.2",
@@ -75,6 +74,7 @@
         "serve": "^14.2.0",
         "typescript": "^5.1.3",
         "vite-svg-loader": "^4.0.0",
+        "vue": "^3.3.4",
         "vue-i18n": "^9.4.1",
         "vue-tsc": "1.8.1"
     },
