--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "nuxt": "^3.7.4",
-        "vue": "^3.3.4",
         "nuxt-og-image": "^2.0.28",
         "nuxt-purgecss": "^2.0.0",
         "nuxt-swiper": "^1.2.2",
@@ -74,9 +73,13 @@
         "release-it": "^15.11.0",
         "serve": "^14.2.0",
         "typescript": "^5.1.3",
+        "use-wagmi": "^0.4.2",
+        "viem": "^1.16.4",
         "vite-svg-loader": "^4.0.0",
+        "vue": "^3.3.4",
         "vue-i18n": "^9.4.1",
-        "vue-tsc": "1.8.1"
+        "vue-tsc": "1.8.1",
+        "wagmi": "^1.4.3"
     },
     "release-it": {
         "github": {
