--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@intlify/unplugin-vue-i18n": "^1.2.0",
         "@nuxtjs/eslint-config-typescript": "^12.0.0",
         "@nuxtjs/eslint-module": "^4.1.0",
+        "@use-wagmi/nuxt": "^1.1.8",
         "consola": "^3.1.0",
         "eslint": "^8.43.0",
         "eslint-config-prettier": "^8.8.0",
@@ -75,7 +76,7 @@
         "serve": "^14.2.0",
         "typescript": "^5.1.3",
         "use-wagmi": "^0.4.2",
-        "viem": "^1.16.4",
+        "viem": "^1.16.5",
         "vite-svg-loader": "^4.0.0",
         "vue": "^3.3.4",
         "vue-i18n": "^9.4.1",
